adaptive is almost ready

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </ul>
             </nav>
         </div>
-        <h4>Relationz</h4>
+        <h4 class="footer__header">Relationz</h4>
         <p class="footer__copyright">Copyright © 2010 - 2019 Relationz Ltd. All rights reserved.</p>
     </footer>
 </div>
