small objects and some animation is added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
 <div class="page">
     <header class="header">
+        <img class="header__elem_red"
+             src="./images/1.svg"
+             alt="Кружок"
+        />
         <img
                 class="header__logo"
                 src="./images/logo.svg"
@@ -24,6 +28,23 @@
         </nav>
     </header>
     <section class="relationship">
+        <img class="header__elem_orange"
+             src="./images/2.png"
+             alt=""
+        />
+        <img class="header__elem_orange-big"
+             src="./images/3.png"
+             alt=""
+        />
+
+        <img class="header__elem_orange-bighalf"
+             src="./images/4.png"
+             alt=""
+        />
+        <img class="header__elem_points"
+             src="./images/Group.png"
+             alt=""
+        />
         <div class="relationship__container">
             <h1 class="relationship__header">Отношения на новом уровне</h1>
             <p class="relationship__description">The multichannel sales engagement platform which automates personal
@@ -44,9 +65,38 @@
                 </ul>
             </nav>
         </div>
-        <img class="relationship__picture" src="images/phone.jpg" alt="Картинка телефона">
+
+        <img class="relationship__picture" src="images/phone21324.png" alt="Картинка телефона">
     </section>
     <section class="clients">
+        <img class="clients__elem_boy"
+             src="./images/boy3.png"
+             alt=""
+        />
+        <img class="clients__elem_man"
+             src="./images/man.png"
+             alt=""
+        />
+        <img class="clients__elem_beard"
+             src="./images/beard.png"
+             alt=""
+        />
+        <img class="clients__elem_half"
+             src="./images/half.png"
+             alt=""
+        />
+        <img class="clients__elem_girl"
+             src="./images/girl.png"
+             alt=""
+        />
+        <img class="clients__elem_laugh"
+             src="./images/laugh.png"
+             alt=""
+        />
+        <img class="clients__blue-points"
+             src="./images/blue-points.png"
+             alt=""
+        />
         <h2 class="clients__header">Что о нас говорят пользователи</h2>
         <div class="clients__box">
             <img class="clients__picture" src="./images/main_girl.jpg">
@@ -62,8 +112,13 @@
             <img class="clients__sign" src="images/sign.jpg">
         </div>
         <img src="images/group.jpg">
+
     </section>
     <section class="banner">
+        <img class="banner__points"
+             src="./images/blue_footer.png"
+             alt=""
+        />
         <div class="banner__container">
             <h3 class="banner_header">Form better relationships with everyone</h3>
             <p class="banner__description">Start your free 14 days trial.</p>
@@ -72,6 +127,10 @@
     </section>
 
     <footer class="footer">
+        <img class="footer__box_circ"
+             src="./images/circ.png"
+             alt=""
+        />
         <div class="footer__box">
             <nav class="footer__column">
                 <h4 class="footer__header">Relationz</h4>
