--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
 <div class="page">
     <header class="header">
-        <img class="header__elem_red"
-             src="./images/1.svg"
-             alt="Кружок"
-        />
+        <div class="header__elem_red"></div>
         <img
                 class="header__logo"
                 src="./images/logo.svg"
@@ -28,23 +25,10 @@
         </nav>
     </header>
     <section class="relationship">
-        <img class="header__elem_orange"
-             src="./images/2.png"
-             alt=""
-        />
-        <img class="header__elem_orange-big"
-             src="./images/3.png"
-             alt=""
-        />
-
-        <img class="header__elem_orange-bighalf"
-             src="./images/4.png"
-             alt=""
-        />
-        <img class="header__elem_points"
-             src="./images/Group.png"
-             alt=""
-        />
+        <div class="header__elem_orange page__elem"></div>
+        <div class="header__elem_orange-big page__elem"></div>
+        <div class="header__elem_orange-bighalf page__elem"></div>
+        <div class="header__elem_points page__elem"></div>
         <div class="relationship__container">
             <h1 class="relationship__header">Отношения на новом уровне</h1>
             <p class="relationship__description">The multichannel sales engagement platform which automates personal
@@ -69,34 +53,16 @@
         <img class="relationship__picture" src="images/phone21324.png" alt="Картинка телефона">
     </section>
     <section class="clients">
-        <img class="clients__elem_boy"
-             src="./images/boy3.png"
-             alt=""
-        />
-        <img class="clients__elem_man"
-             src="./images/man.png"
-             alt=""
-        />
-        <img class="clients__elem_beard"
-             src="./images/beard.png"
-             alt=""
-        />
-        <img class="clients__elem_half"
+        <div class="clients__elem_boy page__elem"></div>
+        <div class="clients__elem_man page__elem"></div>
+        <div class="clients__elem_beard page__elem"></div>
+        <img class="clients__elem_half page__elem"
              src="./images/half.png"
-             alt=""
+             alt="Девушка"
         />
-        <img class="clients__elem_girl"
-             src="./images/girl.png"
-             alt=""
-        />
-        <img class="clients__elem_laugh"
-             src="./images/laugh.png"
-             alt=""
-        />
-        <img class="clients__blue-points"
-             src="./images/blue-points.png"
-             alt=""
-        />
+        <div class="clients__elem_girl page__elem"></div>
+        <div class="clients__elem_laugh page__elem"></div>
+        <div class="clients__blue-points page__elem"></div>
         <h2 class="clients__header">Что о нас говорят пользователи</h2>
         <div class="clients__box">
             <img class="clients__picture" src="./images/main_girl.jpg">
