--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="wrap">
     <div class="page">
         <header class="header">
-            <div class="header__elem_red"></div>
+            <div class="header__elem_red page__elem"></div>
             <img
                     class="header__logo"
                     src="./images/logo.svg"
@@ -84,7 +84,7 @@
 
         </section>
         <section class="banner">
-            <img class="banner__points"
+            <img class="banner__points page__elem"
                  src="./images/blue_footer.png"
                  alt=""
             />
@@ -96,7 +96,7 @@
         </section>
 
         <footer class="footer">
-            <img class="footer__box_circ"
+            <img class="footer__box_circ page__elem"
                  src="./images/circ.png"
                  alt=""
             />
