--- a/index.html
+++ b/index.html
@@ -7,174 +7,182 @@
     <title>Relationz</title>
 </head>
 
+<div class="main-wrap"><img class="clients__elem_half page__elem"
+                            src="./images/half.png"
+                            alt="Девушка"
 
-<div class="wrap">
-    <div class="page">
-        <header class="header">
-            <div class="header__elem_red page__elem"></div>
-            <img
-                    class="header__logo"
-                    src="./images/logo.svg"
-                    alt="Логотип Relationz"
-            />
-            <nav class="header__lang">
-                <a class="header__link" href="#">Услуги</a>
-                <a class="header__link" href="#">Возможности</a>
-                <a class="header__link" href="#">Цены</a>
-                <a class="header__link" href="#">Авторизация</a>
-                <button class="header__link header__link_active" href="#">Регистрация</button>
-            </nav>
-        </header>
-        <section class="relationship">
-            <div class="header__elem_orange page__elem"></div>
-            <div class="header__elem_orange-big page__elem"></div>
-            <div class="header__elem_orange-bighalf page__elem"></div>
-            <div class="header__elem_points page__elem"></div>
-            <div class="relationship__container">
-                <h1 class="relationship__header">Отношения на новом уровне</h1>
-                <p class="relationship__description">The multichannel sales engagement platform which automates personal
-                    email outreach, calls, and tasks,
-                    while
-                    Sales can focus on what really matters - closing deals.</p>
-                <div class="relationship__search">
-                    <input class="relationship__input" placeholder="Email id" type="search"/>
-                    <input class="relationship__button button" type="submit" value="Try it for free"/>
+/>
+    <div class="header__elem_orange-bighalf page__elem"></div>
+    <div class="clients__elem_laugh page__elem"></div>
+    <img class="footer__box_circ page__elem"
+         src="./images/circ.png"
+         alt="Круг"
+    />
+    <div class="wrap">
+
+        <div class="page">
+            <header class="header">
+                <div class="header__elem_red page__elem"></div>
+                <img
+                        class="header__logo"
+                        src="./images/logo.svg"
+                        alt="Логотип Relationz"
+                />
+                <nav class="header__lang">
+                    <a class="header__link" href="#">Услуги</a>
+                    <a class="header__link" href="#">Возможности</a>
+                    <a class="header__link" href="#">Цены</a>
+                    <a class="header__link" href="#">Авторизация</a>
+                    <button class="header__link header__link_active" href="#">Регистрация</button>
+                </nav>
+            </header>
+            <section class="relationship">
+                <div class="header__elem_orange page__elem"></div>
+                <div class="header__elem_orange-big page__elem"></div>
+                <div class="header__elem_points page__elem"></div>
+                <div class="relationship__container">
+                    <h1 class="relationship__header">Отношения на новом уровне</h1>
+                    <p class="relationship__description">The multichannel sales engagement platform which automates
+                        personal
+                        email outreach, calls, and tasks,
+                        while
+                        Sales can focus on what really matters - closing deals.</p>
+                    <div class="relationship__search">
+                        <input class="relationship__input" placeholder="Email id" type="search"/>
+                        <input class="relationship__button button" type="submit" value="Try it for free"/>
+                    </div>
+                    <nav class="relationship__navigation">
+                        <ul class="relationship__list">
+                            <li class="relationship__link"><a class="relationship__link-text" href="#">Synced
+                                contacts</a>
+                            </li>
+                            <li class="relationship__link"><a class="relationship__link-text" href="#">Regular
+                                reminders</a>
+                            </li>
+                            <li class="relationship__link"><a class="relationship__link-text" href="#">The
+                                multichannel </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="relationship__navigation">
-                    <ul class="relationship__list">
-                        <li class="relationship__link"><a class="relationship__link-text" href="#">Synced contacts</a>
-                        </li>
-                        <li class="relationship__link"><a class="relationship__link-text" href="#">Regular reminders</a>
-                        </li>
-                        <li class="relationship__link"><a class="relationship__link-text" href="#">The multichannel </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
 
-            <img class="relationship__picture" src="images/phone21324.png" alt="Картинка телефона">
-        </section>
-        <section class="clients">
-            <div class="clients__elem_boy page__elem"></div>
-            <div class="clients__elem_man page__elem"></div>
-            <div class="clients__elem_beard page__elem"></div>
-            <img class="clients__elem_half page__elem"
-                 src="./images/half.png"
-                 alt="Девушка"
-            />
-            <div class="clients__elem_girl page__elem"></div>
-            <div class="clients__elem_laugh page__elem"></div>
-            <div class="clients__blue-points page__elem"></div>
-            <h2 class="clients__header">Что о нас говорят пользователи</h2>
-            <div class="clients__box">
-                <img class="clients__picture" src="./images/main_girl.jpg">
-                <h3 class="clients__name">Michelle Johnson, Australia</h3>
-                <div class="clients__pic-container">
-                    <img class="clients__pic" src="images/comma.jpg">
-                    <img class="clients__pic" src="images/comma.jpg">
+                <img class="relationship__picture" src="images/phone21324.png" alt="Картинка телефона">
+            </section>
+            <section class="clients">
+                <div class="clients__elem_boy page__elem"></div>
+                <div class="clients__elem_man page__elem"></div>
+                <div class="clients__elem_beard page__elem"></div>
+                <div class="clients__elem_girl page__elem"></div>
+                <div class="clients__blue-points page__elem"></div>
+                <h2 class="clients__header">Что о нас говорят пользователи</h2>
+                <div class="clients__box">
+                    <img class="clients__picture" src="./images/main_girl.jpg">
+                    <h3 class="clients__name">Michelle Johnson, Australia</h3>
+                    <div class="clients__pic-container">
+                        <img class="clients__pic" src="images/comma.jpg">
+                        <img class="clients__pic" src="images/comma.jpg">
+                    </div>
+                    <p class="clients__comment">The multichannel sales engagement platform which automates personal
+                        email
+                        outreach, calls, and tasks,
+                        while Sales can focus on what really matters - closing while Sales can focus on what really
+                        matters
+                        -
+                        closing</p>
+                    <img class="clients__sign" src="images/sign.jpg">
                 </div>
-                <p class="clients__comment">The multichannel sales engagement platform which automates personal email
-                    outreach, calls, and tasks,
-                    while Sales can focus on what really matters - closing while Sales can focus on what really matters
-                    -
-                    closing</p>
-                <img class="clients__sign" src="images/sign.jpg">
-            </div>
-            <img src="images/group.jpg">
+                <img src="images/group.jpg">
 
-        </section>
-        <section class="banner">
-            <img class="banner__points page__elem"
-                 src="./images/blue_footer.png"
-                 alt=""
-            />
-            <div class="banner__container">
-                <h3 class="banner_header">Form better relationships with everyone</h3>
-                <p class="banner__description">Start your free 14 days trial.</p>
-            </div>
-            <button class="banner__button button">Try it for free</button>
-        </section>
+            </section>
+            <section class="banner">
+                <img class="banner__points page__elem"
+                     src="./images/blue_footer.png"
+                     alt=""
+                />
+                <div class="banner__container">
+                    <h3 class="banner_header">Form better relationships with everyone</h3>
+                    <p class="banner__description">Start your free 14 days trial.</p>
+                </div>
+                <button class="banner__button button">Try it for free</button>
+            </section>
 
-        <footer class="footer">
-            <img class="footer__box_circ page__elem"
-                 src="./images/circ.png"
-                 alt=""
-            />
-            <div class="footer__box">
-                <nav class="footer__column">
-                    <h4 class="footer__header">Relationz</h4>
-                    <ul class="footer__links">
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Product Tour</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Pricing</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Founding Members</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Case Studies</a>
-                        </li>
-                    </ul>
-                </nav>
-                <nav class="footer__column">
-                    <h4 class="footer__header">Company</h4>
-                    <ul class="footer__links">
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Blog</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Career</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Privacy</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">About</a>
-                        </li>
-                    </ul>
-                </nav>
+            <footer class="footer">
+                <div class="footer__box">
+                    <nav class="footer__column">
+                        <h4 class="footer__header">Relationz</h4>
+                        <ul class="footer__links">
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Product Tour</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Pricing</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Founding Members</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Case Studies</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <nav class="footer__column">
+                        <h4 class="footer__header">Company</h4>
+                        <ul class="footer__links">
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Blog</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Career</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Privacy</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">About</a>
+                            </li>
+                        </ul>
+                    </nav>
 
-                <nav class="footer__column">
-                    <h4 class="footer__header">Support</h4>
-                    <ul class="footer__links">
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Documentation</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Security</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Mobility Guide</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">FAQs</a>
-                        </li>
-                    </ul>
-                </nav>
+                    <nav class="footer__column">
+                        <h4 class="footer__header">Support</h4>
+                        <ul class="footer__links">
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Documentation</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Security</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Mobility Guide</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">FAQs</a>
+                            </li>
+                        </ul>
+                    </nav>
 
-                <nav class="footer__column">
-                    <h4 class="footer__header">Legal</h4>
-                    <ul class="footer__links">
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Terms of Service</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Privacy Policy</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">Cookie Information</a>
-                        </li>
-                        <li class="footer__list-element">
-                            <a href="#" class="footer__link">GDPR Commitment</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <h4 class="footer__copyright-header">Relationz</h4>
-            <p class="footer__copyright">Copyright © 2010 - 2019 Relationz Ltd. All rights reserved.</p>
-        </footer>
+                    <nav class="footer__column">
+                        <h4 class="footer__header">Legal</h4>
+                        <ul class="footer__links">
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Terms of Service</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Privacy Policy</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">Cookie Information</a>
+                            </li>
+                            <li class="footer__list-element">
+                                <a href="#" class="footer__link">GDPR Commitment</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <h4 class="footer__copyright-header">Relationz</h4>
+                <p class="footer__copyright">Copyright © 2010 - 2019 Relationz Ltd. All rights reserved.</p>
+            </footer>
+        </div>
     </div>
 </div>
 </body>
